  will no longer throw a fit when it occurs
- When opening a floating dockable, the default component will be given
  focus. Previously this was only done for docked windows
- Fixed typo in General option pane
- Fixed race condition in work thread pool that could result in blank
  files on startup
- Fixed typo in css.xml
- Fixed minor problem in HTML version of user's guide

* Version 4.0pre9 (a.k.a 4.0 release candidate 2)

+ Enhancements

- The plugin manager now downloads the plugin list in GZipped format
  from the server. This should especially be noticable for dial-up users
- Minor search bar layout tweak
- The roots: filesystem should now show extra information when running
  on Windows with JDK 1.4 (eg, you should able to see the UNC paths of
  network drive mappings)
- Documentation updates

+ Bug Fixes

- Fixed QuickNotepad build.xml
- Explicit folding did not behave correctly if a line contained both the
  start and end strings ({{{ and }}}) (Ollie Rutherfurd)
- If a plugin depended on a plugin whose jEdit version requirement was
  higher than the installed jEdit version, the 'Update Plugins' command
  would throw a NullPointerException
- Fixed stylesheet problem in the PDF output
- Changing the 'print tab size' setting had no effect
- Changed tip of the day that mentioned an obsolete version of
  WheelMouse
- Fixed possible ArrayIndexOutOfBoundsException in findMatchingBracket()
- Fixed some bugs in HyperSearch when searching for .*, .*$ and $
  regular expressions
- Removed custom quicksort implementation from MiscUtilities (the
  methods are still there, but they just call
  java.util.Collections.sort())
- Fixed a few more possible ClassCastExceptions due to use of
  non-typesafe buffer property accessors
- If a search matcher cannot be created (eg, invalid regexp) the
  HyperSearch results window will no longer be stuck with a
  'Searching...' message
- Fixed gutter autoscroll

* Version 4.0pre8 (a.k.a 4.0 release candidate 1)

+ New Features
